# idxsmiles

./: .gitignore  CHANGELOG.md  LICENSE  README.md  idxsmiles.py  pyproject.toml  test_idxsmiles.py  test_reaction.py
.github/workflows/: ci.yml
idxsmiles/: __init__.py  reaction.py
tests/: test_reaction.py
