[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idxsmiles"
version = "0.2.0"
description = "RDKit SMILES writer that orders atoms by their original atom index instead of canonical rank"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rdkit",
]

[tool.setuptools]
packages = ["idxsmiles"]

[tool.setuptools.package-data]
idxsmiles = ["py.typed"]
